changed alt tags

--- a/products.html
+++ b/products.html
@@ -68,11 +68,11 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/Dark_Delia_Jean/IMG_2615.JPG" loading="lazy"
-                                            class="d-block w-100" alt="79076797">
+                                            class="d-block w-100" alt="Dark_Delia_Jean">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Dark_Delia_Jean/IMG_2607.JPG" loading="lazy"
-                                            class="d-block w-100" alt="79076797">
+                                            class="d-block w-100" alt="Dark_Delia_Jean">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carousel79076797" role="button"
@@ -113,19 +113,19 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/Dark_Delia_Skirt/IMG_1642.JPG" loading="lazy"
-                                            class="d-block w-100" alt="78948639">
+                                            class="d-block w-100" alt="Dark_Delia_Skirt">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Dark_Delia_Skirt/IMG_1647.JPG" loading="lazy"
-                                            class="d-block w-100" alt="78948639">
+                                            class="d-block w-100" alt="Dark_Delia_Skirt">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Dark_Delia_Skirt/IMG_1649.JPG" loading="auto"
-                                            class="d-block w-100" alt="78948639">
+                                            class="d-block w-100" alt="Dark_Delia_Skirt">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Dark_Delia_Skirt/IMG_1652.JPG" loading="auto"
-                                            class="d-block w-100" alt="78948639">
+                                            class="d-block w-100" alt="Dark_Delia_Skirt">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carousel78948639" role="button"
@@ -165,11 +165,11 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/Delia_Corset/20150201_151238.jpg" loading="lazy"
-                                            class="d-block w-100" alt="63533477">
+                                            class="d-block w-100" alt="Delia_Corset">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Delia_Corset/20150201_151245 (1).jpg" loading="lazy"
-                                            class="d-block w-100" alt="63533477">
+                                            class="d-block w-100" alt="Delia_Corset">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carousel63533477" role="button"
@@ -210,35 +210,35 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/Flo_Trench_Coat/20150201_151528.jpg" loading="lazy"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Flo_Trench_Coat/20150201_151604.jpg" loading="auto"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Flo_Trench_Coat/20150201_151612 (1).jpg" loading="auto"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Flo_Trench_Coat/20150201_151624 (1).jpg" loading="auto"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Flo_Trench_Coat/IMG_1624.JPG" loading="auto"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Flo_Trench_Coat/IMG_1630.JPG" loading="auto"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Flo_Trench_Coat/IMG_1638.JPG" loading="auto"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="product_imgs/Flo_Trench_Coat/20150201_151504.jpg" loading="lazy"
-                                            class="d-block w-100" alt="63533479">
+                                            class="d-block w-100" alt="Flo_Trench_Coat coat">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carousel63533479" role="button"
@@ -279,15 +279,15 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/Funky_Business/IMG_1655.JPG" loading="lazy"
-                                            class="d-block w-100" alt="78949131">
+                                            class="d-block w-100" alt="Pencil Skirt">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Funky_Business/IMG_1657.JPG" loading="lazy"
-                                            class="d-block w-100" alt="78949131">
+                                            class="d-block w-100" alt="Pencil Skirt">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Funky_Business/IMG_1659.JPG" loading="auto"
-                                            class="d-block w-100" alt="78949131">
+                                            class="d-block w-100" alt="Pencil Skirt">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carousel78949131" role="button"
@@ -328,15 +328,15 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/Simple_Corset/20150201_153746.jpg" loading="lazy"
-                                            class="d-block w-100" alt="63533478">
+                                            class="d-block w-100" alt="Simple_Corset">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Simple_Corset/20150201_153811 (1).jpg" loading="lazy"
-                                            class="d-block w-100" alt="63533478">
+                                            class="d-block w-100" alt="Simple_Corset">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Simple_Corset/20150201_153827.jpg" loading="auto"
-                                            class="d-block w-100" alt="63533478">
+                                            class="d-block w-100" alt="Simple_Corset">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Simple_Corset/20150201_153832 (1) (1).jpg" loading="auto"
@@ -380,11 +380,11 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/Tera_Corset/20150201_154639.jpg" loading="lazy"
-                                            class="d-block w-100" alt="61441264">
+                                            class="d-block w-100" alt="Tera_Corset">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/Tera_Corset/20150201_154653.jpg" loading="lazy"
-                                            class="d-block w-100" alt="61441264">
+                                            class="d-block w-100" alt="Tera_Corset">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carousel61441264" role="button"
@@ -425,23 +425,23 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <img src="product_imgs/The_Delia_Denim/20150201_151135.jpg" loading="lazy"
-                                            class="d-block w-100" alt="61315649">
+                                            class="d-block w-100" alt="Delia_Denim">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/The_Delia_Denim/20150201_151142.jpg" loading="lazy"
-                                            class="d-block w-100" alt="61315649">
+                                            class="d-block w-100" alt="Delia_Denim">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/The_Delia_Denim/20150201_151149 (1).jpg" loading="auto"
-                                            class="d-block w-100" alt="61315649">
+                                            class="d-block w-100" alt="Delia_Denim">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/The_Delia_Denim/20150201_151202 (1).jpg" loading="auto"
-                                            class="d-block w-100" alt="61315649">
+                                            class="d-block w-100" alt="Delia_Denim">
                                     </div>
                                     <div class="carousel-item ">
                                         <img src="product_imgs/The_Delia_Denim/20150201_151225 (1).jpg" loading="auto"
-                                            class="d-block w-100" alt="61315649">
+                                            class="d-block w-100" alt="Delia_Denim">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carousel61315649" role="button"
