--- a/products.html
+++ b/products.html
@@ -56,7 +56,7 @@
             <div class="container-fluid">
 
                 <div class="row">
-
+<!-- product 1 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
                         <div class="card h-100">
                             <div id="carousel79076797" class="carousel slide carousel-fade" data-interval="false">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-
+<!-- product 2 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
                         <div class="card h-100">
                             <div id="carousel78948639" class="carousel slide carousel-fade" data-interval="false">
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                     </div>
-
+<!-- product 3 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
                         <div class="card h-100">
                             <div id="carousel63533477" class="carousel slide carousel-fade" data-interval="false">
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                     </div>
-
+<!-- product 4 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
                         <div class="card h-100">
@@ -266,7 +266,7 @@
                             </div>
                         </div>
                     </div>
-
+<!-- product 5 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
                         <div class="card h-100">
@@ -315,7 +315,7 @@
                             </div>
                         </div>
                     </div>
-
+<!-- product 6 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
                         <div class="card h-100">
@@ -368,7 +368,7 @@
                             </div>
                         </div>
                     </div>
-
+<!-- product 7 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
                         <div class="card h-100">
                             <div id="carousel61441264" class="carousel slide carousel-fade" data-interval="false">
@@ -412,7 +412,7 @@
                             </div>
                         </div>
                     </div>
-
+<!-- product 8 -->
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
                         <div class="card h-100">
